FEATURE 2350 - Android-Button Color change - ActionDetailsAdapter.kt file removed unused variables. - strings.xml added new text. - Created icon_image_view_background.xml drawable file for all icons background. - Created custom_cancel_button_round_corner.xml drawable fie for All Cancel button background. - New button color Applied xml files are, 1) event_details_card_view.xml 2) fragment_bid_rejection_dialog.xml 3) fragment_dash_board.xml 4) fragment_email_otp.xml 5) fragment_quote_brief.xml 6) fragment_quote_details_dialog.xml 7) quote_brief_dialog.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,17 @@
     <string name="you_rejected_a_catering_1000045">You Rejected a Catering #1000045</string>
     <string name="change_in_mind">Change in Mind ?</string>
     <string name="amount">Amount</string>
+    <string name="bid_proposal_date">Bid proposal date</string>
+    <string name="_9_aug_2021">9 Aug 2021</string>
+    <string name="payment_status">Payment status</string>
+    <string name="serviced_by">Serviced by</string>
+    <string name="na">NA</string>
+    <string name="address">Address</string>
+    <string name="customer_rating">Customer Rating</string>
+    <string name="review_comment">Review Comment</string>
+    <string name="comments">Comments</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
