--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,8 @@
     <string name="comments">Comments</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+    //2401
+    <string name="Do_you_want_to_accept_the_Bid">Do you want to accept the Bid?</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
