FEATURE 2405 - Label for reason of rejection the bid - ActionDetailsAdapter.kt inside passing bidStatus parameter to BidRejectionDialogFragment.kt. - BidRejectionDialogFragment.kt added new bidStatus variable, ok button method and hideAlertText method. - BidRejectionDialogViewModel.kt inside reasonForReject method As Per Ticket Condition resources ArrayList Values Changed. - fragment_bid_rejection_dialog.xml added new title for reason for rejection spinner view, alert text and alert message visibilities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="venue_zip_code">Venue ZIP Code</string>
     <string name="bid_cut_off_date">Bid Cut Off Date</string>
     <string name="questions">Questions</string>
+    <string name="reason_for_rejection">Reason For Rejection</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
