--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">ServiceManagment</string>
     <string name="get_started">Get Started</string>
-
     <string name="signuptext">"New User?<font color='#3aa8c1'>Sign Up</font>"</string>
     <string name="signin">Sign in</string>
     <string name="sign_up">Sign Up</string>
@@ -14,7 +13,6 @@
     <string name="emailid">Emailid</string>
     <string name="sign_in">Sign in</string>
     <string name="sign_upsmall">Sign up</string>
-
     <string name="firstname">FirstName</string>
     <string name="peter">Peter</string>
     <string name="lastname">LastName</string>
@@ -46,7 +44,6 @@
     <string name="status">Status</string>
     <string name="_0_status">0 status</string>
     <string name="actions">Actions</string>
-
     <string name="sole_properitor">Sole Properitor</string>
     <string name="partnership">Partnership</string>
     <string name="llc">LLC</string>
@@ -73,11 +70,9 @@
     <string name="ca457845264162">CA457845264162</string>
     <string name="view_quote">View quote</string>
     <string name="bid_accepted">Bid accepted</string>
-
     <string name="quote_send_to_the_customer_quote_value_2500">Quote send to the customer -Quote Value $2500</string>
     <string name="won_reject_lostbid">Won/Reject/LostBid</string>
     <string name="service_status">Service status</string>
-
     <string name="_9_aug_2022">9 Aug 2022</string>
     <string name="cut_off_date">Cut off date</string>
     <string name="service_date_">Service date</string>
@@ -100,7 +95,7 @@
     <string name="comments">Comments</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
-    //2401
+    // 2401
     <string name="Do_you_want_to_accept_the_Bid">Do you want to accept the Bid?</string>
     <string name="service_details">Service Details</string>
     <string name="estimation_budget">Estimation Budget</string>
@@ -115,26 +110,35 @@
     <string name="bid_cut_off_date">Bid Cut Off Date</string>
     <string name="questions">Questions</string>
     <string name="reason_for_rejection">Reason For Rejection</string>
+    // 2487
+    <string name="icon">Icon</string>
+    <string name="available">Available</string>
+    <string name="aug_14_wednesday">Aug 14 - Wednesday</string>
+    <string name="_12am_3am">12am - 3am</string>
+    <string name="_3am_6am">3am - 6am</string>
+    <string name="_6am_9am">6am - 9am</string>
+    <string name="_9am_12pm">9am - 12pm</string>
+    <string name="_12pm_3pm">12pm - 3pm</string>
+    <string name="_3pm_6pm">3pm - 6pm</string>
+    <string name="_6pm_9pm">6pm - 9pm</string>
+    <string name="_9pm_12am">9pm - 12am</string>
+    <string name="available_with_dummy_text">Available dsdssjbjfbjbfjsbfbf sasassasaasasasasasasasasasasasasasasasdsjhdskdbajbjbdjabjbadnadsddadadadadaddaddadadadadadadadadfsmfms</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
         <item>@string/partnership</item>
         <item>@string/llc</item>
-
     </string-array>
     <string-array name="branches">
         <item>@string/branches</item>
         <item>@string/sole_properitor</item>
         <item>@string/partnership</item>
         <item>@string/llc</item>
-
     </string-array>
-
     <string-array name="currency_type">
         <item>USD($)</item>
         <item>GBP(\u00a3)</item>
         <item>INR(\u20B9)</item>
     </string-array>
-
 
 </resources>
