TASK 2458 - Calendar_view_UI_Screen
-Added Android Injected thing for ScheduleManagement and CalendarSchedule
-Added Activity in Manifest .xml
-Added Right Arrow drawable arrow_right.xml
-Added lifecycleOwner in BaseActivity.kt
-Added CalendarIcon in DashBoardFragment.kt
-Added activity_schedule_management.xml
-Added arrow_left_24.xml
-Added calendar.png
-Added calendar_cell.xml
-Added calendar_icon.xml
-Added CalendarAdapter.kt,CalendarFragment.kt,CalendarUtile.kt
-Added ScheduleManagementActivity.kt
-Added ScheduleManagementModule.kt
-Added ScheduleManagementRepository.kt
-Added ScheduleManagementViewModel.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,13 @@
     <string name="_6pm_9pm">6pm - 9pm</string>
     <string name="_9pm_12am">9pm - 12am</string>
     <string name="available_with_dummy_text">Available dsdssjbjfbjbfjsbfbf sasassasaasasasasasasasasasasasasasasasdsjhdskdbajbjbdjabjbadnadsddadadadadaddaddadadadadadadadadfsmfms</string>
+    <string name="_1">1</string>
+    <string name="s">S</string>
+    <string name="f">F</string>
+    <string name="t">T</string>
+    <string name="w">W</string>
+    <string name="m">M</string>
+    <string name="calendar">Calendar</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
