Task - 2527(Time Slot(Expandable) Lists UI)
- Added ActivityBuilder.kt inside provideTimeSlotsExpandableListFragment(), provideTimeSlotsFragment() methods for injection.
- custom_styles.xml added new CustomTextAppearance for tabLayout text.
- fragment_time_slots.xml added tab background.
- ScheduleManagementActivity.kt added TimeSlotsFragment object for timeSlot UI.
- strings.xml added required strings for task no: 2527.
- TimeSlotsFragment.kt added tabLayout implementations.
- Added TitleData and ListData data class for timeslot values.
- Added CustomExpandableListAdapter for expandable list time slots.
- Expandable List data for dummy timeslots values.
- fragment_time_slots_expandable_list.xml for expandable list.
- Added time_slot_title.xml for time slot title layout.
- Added tab_background_selected.xml and tab_background_unselected.xml drawables for tabLayout.
- Added TimeSlotExpandableListFragment with view model, repository, module classes for expandable list.
- Removed tab_indicator.xml file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,7 @@
     // 2487
     <string name="icon">Icon</string>
     <string name="available">Available</string>
-    <string name="aug_14_wednesday">Aug 14 - Wednesday</string>
+    <string name="aug_14">Aug 14 - </string>
     <string name="_12am_3am">12am - 3am</string>
     <string name="_3am_6am">3am - 6am</string>
     <string name="_6am_9am">6am - 9am</string>
@@ -130,6 +130,8 @@
     <string name="w">W</string>
     <string name="m">M</string>
     <string name="calendar">Calendar</string>
+    // 2527
+    <string name="wednesday">Wednesday</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
