TASK - 2684(Booked Events Not Available On Particular Date  Show Text(No Events Available))
- Added New TextView(No Events Available) Inside time_slot_list.xml and time_slot_bottom.xml files.
- strings.xml added new text no_text_available.
- Added Logic For No Events Available From ApiDayExpandableListFragment.kt, WeekExpandableListFragment.kt, MonthExpandableListFragment.kt files Inside updateExpandableListData Method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,5 +154,7 @@
         <item>GBP(\u00a3)</item>
         <item>INR(\u20B9)</item>
     </string-array>
+    //2684
+    <string name="no_events_available">No Events Available</string>
 
 </resources>
