TASK - 2691(Restrict Multiple expandable time slot list during month navigation)
- AndroidManifest.xml file added App Icon.
- Inside Mipmap Folder Added New App icon.
- serviceId And branchId Sends From CalendarFragment.kt And CalendarUtils.kt to Day, Week, Month ExpandableViewList Fragments.
- strings.xml fil changed App Name(Festo).
- Day, Week, Month ExpandableList Fragment Inside updateExpandableListData Method Restrict Multiple expandable time slot list during month navigation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ServiceManagment</string>
+    <string name="app_name">Festo</string>
     <string name="get_started">Get Started</string>
     <string name="signuptext">"New User?<font color='#3aa8c1'>Sign Up</font>"</string>
     <string name="signin">Sign in</string>
