TASK - 2692 Calendar Functionality Restriction
-Changed the UI design for the Year
-Added the Logics of year selection in the calendar
-Hidden the previous day month year selection
-Validation the selection date is done along with the year
-Created one method in CalendarUtils.kt for getting the year as formatted
-Added the logic of disable the clickable option for previous years and month

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,5 +156,7 @@
     </string-array>
     //2684
     <string name="no_events_available">No Events Available</string>
+    <string name="aug">Aug</string>
+    <string name="_2022">2022</string>
 
 </resources>
