TASK - 2773(Display Only Booked Event Dates In Time Slot Expandable List)
- Inside strings.xml file Added new variable empty.
- fragment_time_slots_expandable_list.xml file added new textView for no events available text.
- CustomExpandableListAdapter.kt add empty text from strings.xml file.
- DayExpandableListFragment.kt file inside changes based on only visible booked events dates.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,9 +154,11 @@
         <item>GBP(\u00a3)</item>
         <item>INR(\u20B9)</item>
     </string-array>
-    //2684
+    // 2684
     <string name="no_events_available">No Events Available</string>
     <string name="aug">Aug</string>
     <string name="_2022">2022</string>
+    // 2773
+    <string name="empty">Empty</string>
 
 </resources>
