--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,5 +160,10 @@
     <string name="_2022">2022</string>
     // 2773
     <string name="empty">Empty</string>
+    // 2776
+    <string name="day">Day</string>
+    <string name="week">Week</string>
+    <string name="month">Month</string>
+    <string name="event">Event</string>
 
 </resources>
