TASK - 2803 Deselecting and Modify Dialog
Note:-
Deselecting and Modify Dialog are created in same custom Dialog Fragment

-Added logical for previous day in CalendarFragment.kt
-Added Dialog Injection in ActivityBuilder.kt
-Implemented the dialog show in CalendarFragment.kt
-Added colour as per the visual frame work design
-Added the dimens.xml for the dialog fragment
-Added the String in the strings.xml
-Added custom_button design for ok and cancel
-Added the custom listview xml file for modify dialog
-Added and implemented logics for the modify dialog list view
-Added and implemented DeselectedDialogFragment
-Added and Module
 implemented DeselectedDialogFragment
 -Added and implemented DeselectedDialogFragmentViewmodel
 -Added and implemented ListData dataclass

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,8 @@
     <string name="day">Day</string>
     <string name="week">Week</string>
     <string name="month">Month</string>
+    // 2803
     <string name="event">Event</string>
-
+    <string name="you_are_deselecting">You are deselecting 3pm - 6pm slots availablity for the entire month of August .This will modify all you existing slots availability.Please click ok to proceed</string>
+    <string name="event_booked_on_the_below_mentioned_dates_hence_you_can_not_modify_the_3pm_6pm_slots_availability">Event Booked on the below mentioned dates.Hence you can not modify the 3pm - 6pm slots availability</string>
 </resources>
