TASK - 2801(Modify Availability New Day Api Integration)
- Added CustomModifyExpandableListAdapterDay.kt for Day modify adapter.
- Created Data class for modify api response ModifyBookedServiceEvents.
- ApiStories.kt, ScheduleManagementViewModel.kt and ScheduleManagementRepository.kt added day modify api call method.
- DayModifyExpandableListFragment.kt added api call.
- DeselectingDialogFragment.kt dialog passing display parameter.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,5 +172,7 @@
     <string name="event_booked_on_the_below_mentioned_dates_hence_you_can_not_modify_the_3pm_6pm_slots_availability">Event Booked on the below mentioned dates.Hence you can not modify the 3pm - 6pm slots availability</string>
     // 2801
     <string name="not_avilable">Not Available</string>
+    <string name="available_small">available</string>
+    <string name="null_text">null</string>
 
 </resources>
