TASK - 2814(Modify Availability - onClick Available slot PUT Call)
- Added DeselectingDialogRepository and ModifyDaySlotResponse file.
- ApiStories.kt file added getModifyDaySlot api call.
- AppConstants.kt file added constant.
- CustomModifyExpandableListAdapterDay.kt, DayModifyExpandableListFragment.kt, DeselectingDialogFragment.kt, DeselectedDialogAdaptor.kt, DeselectingDialogViewModel.kt added put call for ModifyDay.
- RxEvent.kt added ModifyDialog.
- ScheduleManagementViewModel.kt, ScheduleManagementRepository.kt file added DayModify api call.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,10 +169,11 @@
     <string name="you_are_deselecting">You are deselecting </string>
     <string name="you_are_deselecting_first">slots availability for the entire month of </string>
     <string name="you_are_deselecting_second">This will modify all you existing slots availability.Please click OK to proceed </string>
-    <string name="event_booked_on_the_below_mentioned_dates_hence_you_can_not_modify_the_3pm_6pm_slots_availability">Event Booked on the below mentioned dates.Hence you can not modify the 3pm - 6pm slots availability</string>
+    <string name="event_booked_on">Event Booked on the below mentioned dates.Hence you can not modify the </string>
     // 2801
-    <string name="not_avilable">Not Available</string>
+    <string name="not_available">Not Available</string>
     <string name="available_small">available</string>
     <string name="null_text">null</string>
+    <string name="slots_availability">slots availability</string>
 
 </resources>
