TASK - 2815(Modify_Slot_Week_Api_Implementation)
- ApiStories.kt file added week modify update api.
- AppConstants.kt added day, week, month constants.
- DayModifyExpandableListFragment.kt added update based on calender fragment.
- DeselectingDialogFragment.kt, DeselectingDialogViewModel.kt and DeselectingDialogRepository.kt implemented modify week put call.
- ScheduleManagementViewModel.kt and ScheduleManagementRepository.kt implemented modify week api call.
- WeekModifyExpandableListFragment.kt implemented modify week api call and logics.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,5 +175,7 @@
     <string name="available_small">available</string>
     <string name="null_text">null</string>
     <string name="slots_availability">slots availability</string>
+    //2815
+    <string name="entire_week">slots availability for the entire week of </string>
 
 </resources>
