--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="ca457845264162">CA457845264162</string>
     <string name="view_quote">View quote</string>
     <string name="bid_accepted">Bid accepted</string>
-    <string name="quote_send_to_the_customer_quote_value_2500">Quote send to the customer -Quote Value $2500</string>
+    <string name="quote_send_to_the_customer_quote_value_2500">Quote send to the customer - $2500</string>
     <string name="won_reject_lostbid">Won/Reject/LostBid</string>
     <string name="service_status">Service status</string>
     <string name="_9_aug_2022">9 Aug 2022</string>
@@ -136,8 +136,8 @@
     // 2527
     <string name="wednesday">Wednesday</string>
     //2560
-    <string name="active">ACTIVE</string>
-    <string name="inactive">INACTIVE</string>
+    <string name="active">ACTIVE REQUESTS</string>
+    <string name="inactive">INACTIVE REQUESTS</string>
     <string-array name="all_services">
         <item>@string/all_services</item>
         <item>@string/sole_properitor</item>
@@ -179,7 +179,9 @@
     //2815
     <string name="entire_week">slots availability for the entire week of </string>
     // 2805
-    <string name="curabitur_pretium_pellentesque_tristique_donec_nec_nisi_fermentum">Curabitur pretium pellentesque tristique. Donec nec nisi fermentum</string>
+    <string name="title_splash">View and act on event requests, Update availability and much more....Step inside...</string>
     <string name="upcoming_event">Upcoming Event</string>
-    <string name="event_overview">Event Overview</string>
+    <string name="event_overview">My Services</string>
+    <string name="calendar_view">Calendar</string>
+    <string name="review_feedback">Review Feedback</string>
 </resources>
