Task 2879 Calendar month changes and 2884 Won Bid flow
-Added the logic for won bid in ActionsAndStatusFragment.kt
-Changed the size in ui  to fit the all resolution
-Added the logic to the full month and year CalendarUtils.kt
-Changed the dim of ActionDetailsFragment.kt
layout to fit in all resolution

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,5 +186,6 @@
     <string name="review_feedback">Review Feedback</string>
     // 2873
     <string name="slot_booked">Slot Booked</string>
+    <string name="order_details">Order Details</string>
 
 </resources>
