FEATURE - 2886(SignIn and EmailOtp page new design and responsive UI)
- AppConstants.kt added variables for splash_screen_fragment.xml, sign_in_fragment.xml and EmailOTPFragment.kt.
- SignInFragment.kt, EmailOTPFragment.kt and EmailOTPViewModel.kt added logics based on constraint responsive layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,6 +186,8 @@
     <string name="review_feedback">Review Feedback</string>
     // 2873
     <string name="slot_booked">Slot Booked</string>
+    // 2886
+    <string name="resend">Resend</string>
 
 
 </resources>
