FEATURE 2885 Bid Rejected and Lost Bid Flow
-Added the list for lost bid and Bid rejected
-Implemented the Bid rejected flow logic
-Implemented the Lost bid Flow Logic
_Implemented the Api call for Bid Rejected and lost bid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,7 @@
     <string name="colonen">|</string>
     <string name="phonenumber">PhoneNumber</string>
     <string name="or">OR</string>
-    <string name="perter_gmail_com">perter@gmail.com</string>
-    <string name="emailid">Emailid</string>
+    <string name="emailid">Email Id</string>
     <string name="sign_in">Sign in</string>
     <string name="sign_upsmall">Sign up</string>
     <string name="firstname">FirstName</string>
@@ -188,6 +187,7 @@
     <string name="slot_booked">Slot Booked</string>
     // 2886
     <string name="resend">Resend</string>
+    <string name="perter_gmail_com">aaa@bbb.com</string>
 
 
 </resources>
