TASK 2904 (Status_flow_for_gote_details_UI_Design)
note:-Refresh Logic for the fragment
- Change the design in ActionDetailsAdapter.kt
as per the new wireFrame
- Change the Previous design to adapte all the Resolutions
- Implement the logic to refresh the DashBoardFragment.kt
- Implement the logic to refresh the ScheduleManagementActivity.kt
-Created the Two dialog for Start service Flow and Intitate Closer
- Call the QuoteDetailsDialog.kt in BidSubmitted and Won Bid and New Request
-In Signin change the Dimension to adapte all the resolution
- Added the icon for Quote Status view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="comments_is_mandatory_for_thr_option">Comments is mandatory for the option "Others"</string>
     <string name="cost_is_mandatory">Cost is mandatory !</string>
     <string name="you_rejected_a_catering_1000045">You Rejected a Catering #1000045</string>
-    <string name="change_in_mind">Change in Mind ?</string>
+    <string name="change_in_mind">Change in Mind?</string>
     <string name="amount">Amount</string>
     <string name="bid_proposal_date">Bid proposal date</string>
     <string name="_9_aug_2021">9 Aug 2021</string>
@@ -188,6 +188,16 @@
     // 2886
     <string name="resend">Resend</string>
     <string name="perter_gmail_com">aaa@bbb.com</string>
+    // 2904
+    <string name="start_service_text">I hereby confirm the service \n has been successfully started</string>
+    <string name="confirm__">Confirm</string>
+    <string name="choose_file">Choose file</string>
+    <string name="quote_sent">Quote Sent</string>
+    <string name="bidding_in_progress">Bidding in progress</string>
+    <string name="won_bid">Won Bid</string>
 
-
+    <!--to toggle the open close button
+        of the navigation drawer-->
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 </resources>
