FEATURE 2904 Staus_flow_for_Quote_details_UI_Design & Api Implementation
-In Dashboard Screen implemented the new active request for service in progress ActionsAndStatusFragment.kt
-And Implemented the Api for thr Service in Progress
-Implemented the Api to get the Service in Progress list of details and show in the ui
-Show the Status of the service in the Service in Progress
-Created the button in all Active list to show the Status of the event
-Created a custom Dialog to show the Ui Conformation regarding the Initiate closer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,6 +190,7 @@
     <string name="perter_gmail_com">aaa@bbb.com</string>
     // 2904
     <string name="start_service_text">I hereby confirm the service \n has been successfully started</string>
+    <string name="initiate_closer_text">I hereby confirm the service request \n has been successfully completed \n Proceed with Service Closer</string>
     <string name="confirm__">Confirm</string>
     <string name="choose_file">Choose file</string>
     <string name="quote_sent">Quote Sent</string>
