FEATURE - 2845(Login restriction based on role for service vendor app)
- blank_profile_picture and side_nav_menu_selection color drawable file added.
- SignInFragment.kt added role pased login restriction.
- BaseFragment.kt inside added kayboard hide method.
- common_information_dialog.xml changed button colors.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,9 @@
     <string name="logout">Logout</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="catering">Catering</string>
+    <string name="post_any_discount">(post any discount)</string>
+    <string name="quote_details">Quote details</string>
+    <string name="quote_details_for">Quote details for</string>
+    <string name="login_message">The phone number you have mentioned does not match our account. Please try again</string>
 </resources>
