--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="review_comment">Review Comment</string>
     <string name="comments">Comments</string>
     <string name="cancel">Cancel</string>
-    <string name="ok">OK</string>
+    <string name="ok">Ok</string>
     // 2401
     <string name="Do_you_want_to_accept_the_Bid">Do you want to accept the Bid?</string>
     <string name="service_details">Service Details</string>
@@ -212,4 +212,7 @@
     <string name="quote_details_for">Quote details for</string>
     <string name="login_message">The phone number you have mentioned does not match our account. Please try again</string>
     <string name="login_email_message">The email address you have mentioned does not match our account. Please try again</string>
+    <string name="start_service">Start service</string>
+    <string name="quotesite_pdf">Quotesite.pdf</string>
+    <string name="Uploaded">Upload</string>
 </resources>
