TASK - 2687(Modify slot scroll changes)
- Implemented fragmentView inside TimeSlotsFragment.kt fragment instead of viewpager.
- Observer Lifecycle changed based on view.
- Renamed CustomModifyExpandableListAdapterDay.kt file to CustomModifyExpandableListAdapter.kt.
-

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,4 +215,6 @@
     <string name="start_service">Start service</string>
     <string name="quotesite_pdf">Quotesite.pdf</string>
     <string name="Uploaded">Upload</string>
+    <string name="trueText">true</string>
+
 </resources>
