Task 2962 View Quote ui and api flow
-Added the Ui screen design for view quote in quote_brief_dialog.xml
-Added the Api url in ApiStories.kt
-Added the implementation of api in QuoteBriefDialogRepository.kt,  QuoteBriefDialogViewModel.kt,
QuoteBriefDialog.kt
- Added the logic to show the api response in Ui screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,5 +216,8 @@
     <string name="quotesite_pdf">Quotesite.pdf</string>
     <string name="Uploaded">Upload</string>
     <string name="trueText">true</string>
+    <string name="bidding_">Bidding</string>
+    <string name="no_comments_available">No comments available</string>
+    <string name="quote_details__">Quote details</string>
 
 </resources>
