Task 2974 (Dashboard ui resolution)All UI Screen sdp change
-Added the libary and change the sdp in all ui screen
-Added the logic for custom dialog to adapt all the resolution
- Added the logic document download
- Change for 2977 BUgs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,5 +220,9 @@
     <string name="bidding_">Bidding</string>
     <string name="no_comments_available">No comments available</string>
     <string name="quote_details__">Quote details</string>
+    <string name="service_in_progress__">Service in Progress</string>
+    <string name="service_completed__">Service completed</string>
+    <string name="event_details__">EVENT DETAILS</string>
+    <string name="minimum_1mb_npdf_txt_docx">Minimum 1MB \nPDF,txt,docx</string>
 
 </resources>
