--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,10 +219,13 @@
     <string name="trueText">true</string>
     <string name="bidding_">Bidding</string>
     <string name="no_comments_available">No comments available</string>
+    // 2974
     <string name="quote_details__">Quote details</string>
     <string name="service_in_progress__">Service in Progress</string>
     <string name="service_completed__">Service completed</string>
     <string name="event_details__">EVENT DETAILS</string>
     <string name="minimum_1mb_npdf_txt_docx">Minimum 1MB \nPDF,txt,docx</string>
-
+    <string name="active_status"> Active Status</string>
+    <string name="inactive_status"> Inactive Status</string>"Welcome"
+    <string name="welcome">Welcome</string>
 </resources>
