--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,8 +168,9 @@
     <string name="event">Event</string>
     <string name="you_are_deselecting">You are deselecting </string>
     <string name="you_are_selecting">You are selecting </string>
-    <string name="you_are_deselecting_first">slots availability for the entire month of </string>
-    <string name="you_are_deselecting_second">This will modify all you existing slots availability.Please click OK to proceed </string>
+    <string name="you_are_deselecting_first">slots availability for the day of </string>
+    <string name="you_are_deselecting_month">slots availability for the month of </string>
+    <string name="you_are_deselecting_second">This will modify all you existing slots availability. Please click OK to proceed </string>
     <string name="event_booked_on">Event Booked on the below mentioned dates.Hence you can not modify the </string>
     // 2801
     <string name="not_available">Not Available</string>
@@ -225,7 +226,7 @@
     <string name="service_completed__">Service completed</string>
     <string name="event_details__">EVENT DETAILS</string>
     <string name="minimum_1mb_npdf_txt_docx">Minimum 1MB \nPDF,txt,docx</string>
-    <string name="active_status"> Active Status</string>
-    <string name="inactive_status"> Inactive Status</string>"Welcome"
+    <string name="active_status"> Active Services</string>
+    <string name="inactive_status"> Inactive Services</string>"Welcome"
     <string name="welcome">Welcome</string>
 </resources>
