Feature 2990 Invalid otp validation
-Implemented the Api call to check the validation
-Implemented the validation method in aws
-implemented the logic to restrict the uploading file type
-Implemented the Ui permission to download
-Implemented the Aws file based on build enviroment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,7 +225,7 @@
     <string name="service_in_progress__">Service in Progress</string>
     <string name="service_completed__">Service completed</string>
     <string name="event_details__">EVENT DETAILS</string>
-    <string name="minimum_1mb_npdf_txt_docx">Minimum 1MB \nPDF,txt,docx</string>
+    <string name="minimum_1mb_npdf_txt_docx">Minimum 5MB \nPDF,Doc,Excel,Image</string>
     <string name="active_status"> Active Services</string>
     <string name="inactive_status"> Inactive Services</string>"Welcome"
     <string name="welcome">Welcome</string>
