FEATURE 2985 (Modify_slot_business_validation)
-Implemented the api call to get the Validitiy date CalendarFragment.kt
-sented the entire month date to MonthModifyExpandableListFragment.kt
-Implemented the logic to show the date before the valdity date in DayModifyExpandableListFragment.kt MonthModifyExpandableListFragment.kt
WeekModifyExpandableListFragment.kt
-Implemented the Dialog in  DayModifyExpandableListFragment.kt MonthModifyExpandableListFragment.kt
                           WeekModifyExpandableListFragment.kt
                           to show the restiction of modify

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,9 @@
     <string name="active_status"> Active Services</string>
     <string name="inactive_status"> Inactive Services</string>"Welcome"
     <string name="welcome">Welcome</string>
+    <string name="deny_message">You cannot able to Download the file from Festo. Until you allow to access the storage</string>
+    <string name="week_validtity_message">\"You cannot able to Modify this week . Because business validity is expired after \"</string>
+    <string name="try_week">.Try to modify in day slot</string>
+    <string name="month_validity_msd">\"You cannot able to Modify this month . Because business validity is expired after \"</string>
+
 </resources>
