Task 3012 Download the file and access permissio
-Implemented the access permission to download the file
-Implemented the logic to download the file
-Implemented the Calendar Adaptor logic to show only the business validity date
_done minimize and the app and remain same page while we change the deny and allow permission manually

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,9 +230,9 @@
     <string name="inactive_status"> Inactive Services</string>"Welcome"
     <string name="welcome">Welcome</string>
     <string name="deny_message">You cannot able to Download the file from Festo. Until you allow to access the storage</string>
-    <string name="week_validtity_message">You cannot able to Modify this week. Because business validity is expired after</string>
+    <string name="week_validtity_message">Your Business registration valid to date is No longer available for the selected Week</string>
     <string name="try_week">. Try to modify in day slot</string>
     <string name="try_month">. Try to modify in week or day slot</string>
-    <string name="month_validity_msd">You cannot able to Modify this month. Because business validity is expired after</string>
+    <string name="month_validity_msd">Your Business registration valid to date is No longer available for the selected Month</string>
 
 </resources>
