FEATURE - 2981(Service provider is able to modify their slots, event the quote was submitted to the event organiser)
- DayExpandableListFragment.kt, WeekExpandableListFragment.kt and MonthExpandableListFragment.kt restricted quote sent details. Only showing booked events list in UI.
- DayModifyExpandableListFragment.kt, WeekModifyExpandableListFragment.kt and MonthModifyExpandableListFragment.kt include quote sent while modifying slots on UI.
- CustomExpandableListAdapter.kt and CustomModifyExpandableListAdapter.kt changed logics based on quote sent flow.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,6 +187,7 @@
     <string name="review_feedback">Review Feedback</string>
     // 2873
     <string name="slot_booked">Slot Booked</string>
+    <string name="Quote_Sent">Quote Sent</string>
     // 2886
     <string name="resend">Resend</string>
     <string name="perter_gmail_com">aaa@bbb.com</string>
