Task 3028 Otp Bugs
Note:- For Bugs Ticket no :3031,3026,3027,3029,3028,3030

Issue 1: If the entered otp is wrong then we need to refresh the OTP screen as empty fields, currently, the entered OTP is showing event the validation throws
Issue 2: unable to delete only the 2 digit of the OTP post enter the 3 or more digits of the otp
Issue 3: While entering the wrong OTP for the third attempt, the "Account locked message should show instead of showing "Invalid OTP". Because invalid OTP message is showing for 5 sec, then the account locked message is showing, in the meantime, i had entered the email id and attempted to login again.
Issue 4 : Ui content of Otp is modified
Issue 5 : Based on the aws response we are showing expried otp message after 2 min
Issue 6:Resend OTP restricted  maximum limit should be 10 times.  PFB feature description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,8 +171,8 @@
     <string name="you_are_deselecting_first">slots availability for the day of </string>
     <string name="you_are_deselecting_month">slots availability for the month of </string>
     <string name="you_are_deselecting_second">This will modify all you existing slots availability. Please click OK to proceed </string>
-    <string name="event_booked_on">Event Booked on the below mentioned dates. Hence you can not modify the </string>
-    <string name="quote_sent_on">Quote sent on this time slot. Hence you can not modify the </string>
+    <string name="event_booked_on">Event Booked on the below mentioned date. Hence you can not modify the </string>
+    <string name="quote_sent_on">Bid submitted on this time slot. Hence you can not modify the </string>
     // 2801
     <string name="not_available">Not Available</string>
     <string name="available_small">available</string>
@@ -188,7 +188,7 @@
     <string name="review_feedback">Review Feedback</string>
     // 2873
     <string name="slot_booked">Slot Booked</string>
-    <string name="Quote_Sent">Quote Sent</string>
+    <string name="Quote_Sent">Bid submitted</string>
     // 2886
     <string name="resend">Resend</string>
     <string name="perter_gmail_com">aaa@bbb.com</string>
@@ -236,5 +236,8 @@
     <string name="try_week">. Try to modify in day slot</string>
     <string name="try_month">. Try to modify in week or day slot</string>
     <string name="month_validity_msd">Your Business registration valid to date is No longer available for the selected Month</string>
+    <string name="click_resend_in">Click Resend in</string>
+    <string name="otp_sent_to_your_mail"><![CDATA[OTP has been sent to your registered Email ID & Mobile number]]></string>
+    <string name="resend_clicked_multiple_time">Clicked multiple time Resend otp. Try after some time</string>
 
 </resources>
