--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,4 +266,9 @@
     <string name="Branches">Branches</string>
     <string name="actionAndStatus">actionAndStatus</string>
     <string name="bidStatus">bidStatus</string>
+    // 3212
+    <string name="notification_count">notificationCount</string>
+    <string name="notification">notification</string>
+    <string name="delete">delete</string>
+    <string name="no_records_found">No Records Found</string>
 </resources>
