--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -271,4 +271,6 @@
     <string name="notification">notification</string>
     <string name="delete">delete</string>
     <string name="no_records_found">No Records Found</string>
+    <string name="nine">9</string>
+    <string name="plus_symbol">+</string>
 </resources>
