FEATURE - 3336(Service images are not displayed in mobile app)
- Added service image inside order details page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,4 +274,7 @@
     <string name="nine">9</string>
     <string name="plus_symbol">+</string>
     <string name="colon_space">:</string>
+    //3336
+    <string name="title">title</string>
+    <string name="data">data</string>
 </resources>
