TASK - 3354(Adding content inside Internet dialog UI)
- Added content inside InternetErrorDialog.kt file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,4 +277,8 @@
     //3336
     <string name="title">title</string>
     <string name="data">data</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="no_internet_connection_available">No Internet Connection Available</string>
+    <string name="your_device_is_not_connected_to_internet_please_make_sure_your_connection_is_working">Your device is not connected to internet, Please make sure your connection is working.</string>
+    <string name="try_again">Try Again</string>
 </resources>
